--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.gradle/
+*.iml
+.gradle
+/local.properties
 .idea/
+.DS_Store
 build/
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+
+# 로그 파일
+*.log
 candiyHC/.gradle/
